--- a/src/app.css
+++ b/src/app.css
@@ -2,10 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    --fa-primary-color: #000000;
-    --fa-primary-opacity: 1;
-    --fa-secondary-color: #3d7dd2;
-    --fa-secondary-opacity: 1;
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('/fontawesome/webfonts/fa-solid-900.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
+body {
+  --fa-primary-color: #000000;
+  --fa-primary-opacity: 1;
+  --fa-secondary-color: #3d7dd2;
+  --fa-secondary-opacity: 1;
 }
