--- a/src/app.css
+++ b/src/app.css
@@ -16,3 +16,18 @@ body {
   --fa-secondary-color: #3d7dd2;
   --fa-secondary-opacity: 1;
 }
+
+#mermaid .outcome>* {
+  stroke: #000 !important;
+  transition: all 0.3s;
+}
+
+#mermaid .outcome:hover>* {
+  stroke: #3d7dd2 !important;
+  transition: all 0.3s;
+}
+
+#mermaid g.edgelabel {
+  padding: 3px !important;
+  color: blue;
+}
