--- a/src/app.css
+++ b/src/app.css
@@ -10,12 +10,12 @@
 	font-display: swap;
 }
 
-#mermaid .outcome > * {
+#mermaid .outcome>* {
 	stroke: #000 !important;
 	transition: all 0.3s;
 }
 
-#mermaid .outcome:hover > * {
+#mermaid .outcome:hover>* {
 	stroke: #3d7dd2 !important;
 	transition: all 0.3s;
 }
@@ -45,7 +45,7 @@
 }
 
 ._toastItem {
-	@apply !alert !alert-warning !shadow-lg;
+	@apply !alert !alert-warning !shadow-lg !text-wrap;
 }
 
 ._toastBtn {
