--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,8 @@
 
 @font-face {
 	font-family: 'FontAwesome';
-	src: url('https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/webfonts/fa-solid-900.woff2') format('woff2');
+	src: url('https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/webfonts/fa-solid-900.woff2')
+		format('woff2');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
