Style my-account and registration pages

--- a/src/app.css
+++ b/src/app.css
@@ -57,3 +57,9 @@
 		display: block;
 	}
 }
+
+/* https://github.com/kbrgl/svelte-french-toast/issues/103 */
+.toaster > .wrapper > .base > .indicator > .status {
+	height: auto !important;
+	width: auto !important;
+}
