--- a/src/app.css
+++ b/src/app.css
@@ -173,6 +173,7 @@ ol[data-type='sub-clause-group'] {
 	list-style: none;
 	padding-left: 1.5rem;
 	margin: 0.5rem 0;
+	display: block;
 }
 
 li[data-type='sub-clause'] {
@@ -180,6 +181,7 @@ li[data-type='sub-clause'] {
 	margin-bottom: 0.25rem;
 	padding-left: 1.5rem;
 	position: relative;
+	display: block;
 }
 
 /* Numbering style: a., b., c. */
